SERVER-42632 Disable pinger threads that reach out to config server to make integration tests pass